# CH32V208_dome

./: README.md
CH32V208GBU_ble/: .cproject  .project  .template  CH32V208GBU.launch  CH32V208GBU.wvproj  eide.code-workspace
CH32V208GBU_ble/.eide/: eide.yml
CH32V208GBU_ble/.mrs/: 1487e247eb5836f8285db03693705987-.snapshot  launch.json
CH32V208GBU_ble/User/: Main.c  board.c  board.h  ch32v20x_it.c  system_ch32v20x.c
CH32V208GBU_ble/bsp/: i2c.c  i2c.h  usb_cdc.c  usb_cdc.h
CH32V208GBU_ble/bsp/UART/: UART.c  UART.h
CH32V208GBU_ble/bsp/USBLIB/CONFIG/: hw_config.c  usb_endp.c  usb_pwr.c
CH32V208GBU_ble/bsp/USBLIB/USB-Driver/inc/: usb_type.h
CH32V208GBU_ble/bsp/USBLIB/USB-Driver/src/: usb_core.c
CH32V208GBU_ble/sdk/Debug/: debug.c  debug.h
CH32V208GBU_ble/sdk/HAL/: Link.ld  MCU.c  RTC.c
CH32V208GBU_ble/sdk/HAL/include/: config.h
CH32V208GBU_ble/sdk/LIB/: wchble.h
CH32V208GBU_ble/sdk/Ld/: Link.ld
CH32V208GBU_ble/sensor/sht40/: sht40_hal.c
ch32v208_templete/MR2/: .cproject  .project
ch32v208_templete/MR2/.mrs/: 5b5451294dc1af686044a7ebf4ca77f5-.snapshot  launch.json
ch32v208_templete/MR2/SDK/Debug/: debug.c
ch32v208_templete/cmake_xmake/: CH32V208GBU_Templete.map  CMakeLists.txt  xmake.lua
ch32v208_templete/cmake_xmake/.xmake/windows/x64/: xmake.conf
ch32v208_templete/cmake_xmake/.xmake/windows/x64/cache/: config  detect  history  toolchain
ch32v208_templete/eide/: CH32V208GBU_Templete.launch  CH32V208GBU_Templete.wvproj
ch32v208_templete/eide/.eide/: eide.yml
ch32v208_templete/eide/.mrs/: CH32V208GBU_Templete.mrs-workspace  da8f5e55a494ba163656c19503ce0ee9-.snapshot
ch32v208_templete/eide/tools/: wch-interface.cfg
ch32v208_tmos/: .cproject  .template  CH32V208GBU_Templete.wvproj
ch32v208_tmos/.eide/: eide.yml
ch32v208_tmos/.mrs/: 1131122ca518934fc26316fd5581ed5b-.snapshot  CH32V208GBU_Templete.mrs-workspace  launch.json
ch32v208_tmos/APP/: main.c  system_ch32v20x.c
ch32v208_tmos/sdk/Debug/: debug.c
ch32v208_tmos/sdk/HAL/: MCU.c  RTC.c
ch32v208_tmos/sdk/HAL/include/: LED.h  config.h
